# ronin

./: .dockerignore  .env.local  .env.tests  .gitignore  LICENSE  Makefile  README.md  architecture.md  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yml
backend/: conftest.py
backend/config/: servers.yaml
backend/game/: game-architecture.md  game-rules.md
backend/game/logic/: abortive.py  action_handlers.py  ai_player_controller.py  call_resolution.py  enums.py  events.py  furiten_tracker.py  game.py  mahjong_service.py  matchmaker.py  meld_compact.py  meld_wrapper.py  melds.py  rng.py  round.py  round_advance.py  scoring.py  service.py  settings.py  shanten.py  state.py  state_utils.py  tiles.py  timer.py  turn.py  types.py  wall.py  win.py
backend/game/messaging/: compact.py  encoder.py  event_payload.py  protocol.py  router.py  types.py  wire_enums.py
backend/game/replay/: __init__.py  loader.py  models.py
backend/game/server/: app.py  rate_limit.py  settings.py  types.py  websocket.py
backend/game/session/: broadcast.py  heartbeat.py  manager.py  models.py  replay_collector.py  room.py  room_manager.py  session_store.py  timer_manager.py  types.py
backend/game/tests/: conftest.py
backend/game/tests/helpers/: auth.py  websocket.py
backend/game/tests/integration/: test_architecture_boundary.py  test_game_flow.py  test_websocket.py  test_websocket_reconnect.py
backend/game/tests/mocks/: __init__.py  connection.py  game_service.py
backend/game/tests/unit/: helpers.py  test_abortive.py  test_abortive_draws.py  test_action_handlers_edge_cases.py  test_action_handlers_immutable.py  test_ai_player.py  test_ai_player_controller.py  test_app_lifecycle.py  test_encoder.py  (+57 more)
backend/game/wire/: enums.py
backend/lobby/: game_transition.py  lobby-architecture.md  websocket_utils.py
backend/lobby/auth/: __init__.py  backend.py  middleware.py  models.py  policy.py
backend/lobby/games/: service.py  types.py
backend/lobby/matchmaking/: manager.py  messages.py  models.py  websocket.py
backend/lobby/registry/: manager.py  types.py
backend/lobby/rooms/: connections.py  manager.py  messages.py  models.py  websocket.py
backend/lobby/server/: app.py  csrf.py  middleware.py  settings.py
backend/lobby/tests/: conftest.py
backend/lobby/views/: __init__.py  assets.py  auth_handlers.py  game_handlers.py  handlers.py  history_handlers.py  replay_handlers.py
backend/scripts/: register_bot.py
backend/shared/: __init__.py  build_info.py  logging.py  storage.py  validators.py
backend/shared/auth/: __init__.py  file_repository.py  game_ticket.py  models.py  password.py  repository.py  service.py  session_store.py  settings.py
backend/shared/dal/: __init__.py  game_repository.py  models.py  player_repository.py
backend/shared/db/: __init__.py  connection.py  game_repository.py  player_repository.py
backend/shared/tests/: test_build_info.py  test_dead_code.py  test_logging.py  test_storage.py  test_validators.py
client/: .gitignore  index.html  package.json
client/src/: api.ts  index.ts  protocol.ts  router.ts  websocket.ts
client/src/styles/: _game.scss  _layout.scss  _variables.scss  main.scss
client/src/views/: game.ts  lobby.ts  room.ts
deploy/: .env.example  .env.system.example  Dockerfile  Makefile  Makefile.server  README.md  docker-compose.yml  spot-env.dev.yml  spot.yml
deploy/config/: Caddyfile  servers.yaml  traefik-dynamic.yml
deploy/scripts/: backup.sh  docker-firewall.sh  restore-local.sh  restore.sh
deploy/scripts/systemd/: ronin-backup.service  ronin-backup.timer  ronin-docker-firewall.service
frontend/: .env.development  .gitignore  .oxfmtrc.json  .oxlintrc.json  .stylelintrc.json  frontend-architecture.md  index.html  lobby.html  package.json  svgo.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: game-redirect.js
frontend/scripts/: build-game.ts  build-lobby.ts  build-tile-sprite.ts  dev.sh  generate-manifest.ts
frontend/src/: env.ts  index.ts  protocol.ts  router.ts  session-storage.test.ts  session-storage.ts  socket-handoff.ts  tile-config.ts  tile-utils.test.ts  tile-utils.ts  tiles.test.ts  tiles.ts  websocket.ts  zod-setup.ts
frontend/src/lobby/: games-history.ts  index.ts  lobby-socket.ts  room.ts
frontend/src/styles/: _discards.scss  _game-board.scss  _game.scss  _hand.scss  _lobby.scss  _melds.scss  _pico.scss  _replay-state.scss  _reset.scss  _room.scss  _storybook.scss  _theme.scss  _tile.scss  _variables.scss  game-app.scss  lobby-app.scss
frontend/src/views/: game.ts  replay.test.ts  replay.ts  room.ts  storybook-board.ts  storybook-discards.ts  storybook-hand.ts  storybook-melds.ts  storybook-nav.ts  storybook.ts
src/config/: servers.yaml
src/game/: architecture.md  game-architecture.md  game-rules.md
src/game/logic/: abortive.py  action_handlers.py  action_result.py  actions.py  ai_player.py  ai_player_controller.py  bot.py  bot_controller.py  call_resolution.py  enums.py  events.py  exceptions.py  game.py  mahjong_service.py  matchmaker.py  meld_wrapper.py  melds.py  mock.py  riichi.py  rng.py  round.py  round_advance.py  scoring.py  service.py  settings.py  shanten.py  state.py  state_utils.py  tiles.py  timer.py  turn.py  types.py  utils.py  wall.py  win.py
src/game/messaging/: encoder.py  event_payload.py  events.py  mock.py  protocol.py  router.py  types.py
src/game/replay/: __init__.py  loader.py  models.py  runner.py
src/game/server/: app.py  settings.py  types.py  websocket.py
src/game/session/: heartbeat.py  manager.py  models.py  replay_collector.py  room.py  session_store.py  timer_manager.py  types.py
src/game/static/: game.html  game.legacy.html
src/game/tests/: conftest.py
src/lobby/: architecture.md  lobby-architecture.md
src/lobby/games/: service.py  types.py
src/lobby/registry/: manager.py  types.py
src/lobby/server/: app.py  settings.py
src/lobby/static/: index.html
src/shared/: logging.py  storage.py  validators.py
src/shared/tests/: test_dead_code.py  test_logging.py  test_storage.py  test_validators.py
(+312 files in other folders)
