[project]
name = "ronin"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "starlette>=0.52.1",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "pyyaml>=6.0.0",
    "mahjong>=1.4.0",
    "msgpack>=1.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lobby", "src/game", "src/shared"]

[tool.pytest.ini_options]
testpaths = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = "test_*.py"
addopts = "-p no:warnings --no-header --tb=short -qq --cov --cov-report=term:skip-covered"

[tool.ruff]
src = ["src"]
target-version = "py314"
line-length = 110

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
    "D200", # One-line docstring should fit on one line
    "D203", # One blank line before class
    "D213", # Multi-line summary second line
    "D212", # Multi-line summary first line should end with a period
    "COM812", # Trailing comma missing
    # Exception message rules - overly pedantic. Standard Python patterns like
    # `raise SomeError("message")` are clear and readable. Forcing message extraction
    # to variables adds boilerplate without improving clarity.
    "TRY003", # Avoid specifying long messages outside exception class
    "EM101",  # Exception must not use a string literal
    "EM102",  # Exception must not use an f-string literal
    # Pydantic models used in function signatures need runtime imports for validation
    "TC001",  # Move application import into type-checking block
]

[tool.ruff.lint.per-file-ignores]
# tests are allowed to have less restrictive rules
"test_*.py" = [
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation
    "ANN202", # Missing return type annotation for private function
    "PLR2004", # Magic value used in comparison
    "S101", # Use of `assert` detected
    "SLF001", # Private member accessed - common in tests to verify internal state
    "D401", # Imperative mood - test helpers often use descriptive names
]
"conftest.py" = [
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["src"]

[[tool.ty.overrides]]
include = ["**/test_*.py", "**/conftest.py"]

[tool.ty.overrides.rules]
# relax rules for test files - tests often use dynamic fixtures, mocks,
# and untyped external libraries (mahjong) that produce Unknown types
possibly-unresolved-reference = "warn"
possibly-missing-attribute = "warn"
invalid-argument-type = "warn"
invalid-parameter-default = "warn"

[tool.coverage.run]
source = ["src"]
omit = ["**/tests/*", "**/test_*", "src/lobby/*", "src/game/logic/bot.py", "src/game/logic/bot_controller.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    '^\\s*\\.\\.\\.\\s*$',
    '^\\s*pass\\s*$',
    "@(abc\\.)?abstractmethod",
]
fail_under = 100
